--- a/css/styles.css
+++ b/css/styles.css
@@ -7,13 +7,13 @@ h2{
     font-weight: lighter;
 }
 main button{
-    width: 456px;
-    margin: 11px;
+    width: 400px;
+    margin: 10px;
     height: 150px;
     border-radius: 15px;
 }
 main{
-width: 58%;
+width: 1270px;
 margin: auto;
 }
 header button{
@@ -25,9 +25,10 @@ header button{
     right: 8px;
     top: 8px;
 }
+
 footer{
     text-align: center;
-    width: fit-content;
+    width: 36%;
     margin: auto;
 }
 h3{
@@ -35,5 +36,7 @@ font-size:larger;
 font-weight: lighter;
 }
 footer button{
-    
+    width: 150px;
+    height: 35px;
+    border-radius: 15px;
 }
